# Mhacks16-Project

./: README.md  pyproject.toml
mhacks16-project/: emotion.py  gpt.py  gui_streamlit.py  main.py  speech.py  speech2.py  speech_to_text.py  textEmotion.py
mhacks16-project/eye-contact-cnn-master/: demo.py  interview2_output.txt  model.py
