[tool.poetry]
name = "mhacks16-project"
version = "0.1.0"
description = "AI-powered interview prep tool"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.3"
python-dotenv = "^1.0.0"
speechrecognition = "^3.10.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
